feat: mini explanation added

--- a/diagnostico_IIC2154.ipynb
+++ b/diagnostico_IIC2154.ipynb
@@ -1357,9 +1357,18 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Función 1:** se nos pide extraer los 10 tweets más retweeteados. Por la documentación de Twitter, sabemos que existe una columna del dataframe llamada `retweetCount`, que indica el número de veces que cada Tweet fue retuiteado."
+      ],
+      "metadata": {
+        "id": "MYtUhLNOr5RX"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "#Los top 10 tweets más retweeted.\n",
+        "#Los top 10 tweets más retweeted\n",
         "def top10_retweeted():\n",
         "    df_copy = tweets.copy()\n",
         "    df_copy = df_copy.sort_values(by='retweetCount', ascending=False)\n",
