refactor: comments and explanations added

--- a/diagnostico_IIC2154.ipynb
+++ b/diagnostico_IIC2154.ipynb
@@ -2179,14 +2179,25 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Función 3:** se solicita un top 10 de los días que más se publicaron tweets. Para eso usaremos el atributo `date` de los tweets, que ya está formateado para que sea más sencillo agrupar los datos por fecha."
+      ],
+      "metadata": {
+        "id": "_WXzMmrQ_ohp"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#Los top 10 días donde hay más tweets.\n",
         "def top10_days():\n",
+        "    #Agrupamos por fecha\n",
         "    stats = tweets['id'].groupby(tweets['date']).count() \\\n",
         "                      .sort_values(ascending=False) \\\n",
         "                      .head(10)\n",
         "\n",
+        "    #Dejamos los datos con formato dataframe\n",
         "    top10_stats = stats.rename('tweetCount') \\\n",
         "                      .to_frame() \\\n",
         "                      .reset_index()\n",
