--- a/diagnostico_IIC2154.ipynb
+++ b/diagnostico_IIC2154.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "name": "diagnostico-IIC2154.ipynb",
-      "provenance": []
+      "provenance": [],
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -2578,20 +2579,21 @@
         "          info_selected = top10_hashtags()\n",
         "      elif selected == 'X' or selected == 'x':\n",
         "          satisfecho = True\n",
-        "          print('Nos vemos!')\n",
+        "          print('\\nNos vemos!')\n",
         "          continue\n",
         "      else:\n",
         "          print(\"\\nEso no está entre nuestras opciones, inténtalo otra vez\")\n",
         "          continue\n",
         "\n",
-        "      print(info_selected)\n",
+        "      print('\\n')\n",
+        "      display(info_selected)\n",
         "      print('\\n')\n",
         "      "
       ],
       "metadata": {
         "id": "_ahBY4wgT6i4"
       },
-      "execution_count": 179,
+      "execution_count": 183,
       "outputs": []
     },
     {
@@ -2600,100 +2602,10 @@
         "main()"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "1X-IELIYVo-5",
-        "outputId": "9be5d3ac-8ad7-4fe8-e8b9-a3a35c1f75a2"
+        "id": "CShZymVbZDdT"
       },
-      "execution_count": 177,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Bienvenido al sistema de análsis de Twitter.\n",
-            "\n",
-            "¿Qué deseas saber?\n",
-            "1. Los 10 tweets más retweeteados\n",
-            "2. Los 10 usuarios que más tweets han publicado\n",
-            "3. Los 10 días en que más tweets se publicaron\n",
-            "4. Los 10 hashtags más populares\n",
-            "X. Salir\n",
-            "Ingrese el número de su elección: 1\n",
-            "                                             content  retweetCount  \\\n",
-            "0  why aren’t we talking about this?! #FarmersPro...        315547   \n",
-            "1  We stand in solidarity with the #FarmersProtes...        103957   \n",
-            "2  I still #StandWithFarmers and support their pe...         67694   \n",
-            "3  “Paid actors,” huh? Quite the casting director...         35921   \n",
-            "4  What in the human rights violations is going o...         26972   \n",
-            "5  Happy to share that I’ve donated $10,000 to pr...         23251   \n",
-            "6  There has been much social media coverage arou...         20132   \n",
-            "7  Farmers feed the world. Fight for them. Protec...         18744   \n",
-            "8  Should be talking about this! #FarmersProtest\\...         17368   \n",
-            "9  To all of my influencer/celeb friends- read up...         15677   \n",
-            "\n",
-            "                                                 url  \n",
-            "0  https://twitter.com/rihanna/status/13566258896...  \n",
-            "1  https://twitter.com/GretaThunberg/status/13566...  \n",
-            "2  https://twitter.com/GretaThunberg/status/13572...  \n",
-            "3  https://twitter.com/miakhalifa/status/13568483...  \n",
-            "4  https://twitter.com/miakhalifa/status/13568277...  \n",
-            "5  https://twitter.com/TeamJuJu/status/1357048037...  \n",
-            "6  https://twitter.com/BobBlackman/status/1357755...  \n",
-            "7  https://twitter.com/vanessa_vash/status/135668...  \n",
-            "8  https://twitter.com/kylekuzma/status/135700972...  \n",
-            "9  https://twitter.com/AmandaCerny/status/1359013...  \n",
-            "\n",
-            "\n",
-            "\n",
-            "\n",
-            "¿Qué deseas saber?\n",
-            "1. Los 10 tweets más retweeteados\n",
-            "2. Los 10 usuarios que más tweets han publicado\n",
-            "3. Los 10 días en que más tweets se publicaron\n",
-            "4. Los 10 hashtags más populares\n",
-            "X. Salir\n",
-            "Ingrese el número de su elección: 4\n",
-            "                 hashtagName   count\n",
-            "0            #FarmersProtest  406613\n",
-            "1         #IStandWithFarmers   15783\n",
-            "2            #farmersprotest   15458\n",
-            "3  #IndianFarmersHumanRights   12019\n",
-            "4           #FarmersAreIndia   11043\n",
-            "5          #StandWithFarmers   10645\n",
-            "6                   #Rihanna    9117\n",
-            "7           #FarmersProtests    8750\n",
-            "8                   #Farmers    6561\n",
-            "9          #shameonbollywood    6270\n",
-            "\n",
-            "\n",
-            "\n",
-            "\n",
-            "¿Qué deseas saber?\n",
-            "1. Los 10 tweets más retweeteados\n",
-            "2. Los 10 usuarios que más tweets han publicado\n",
-            "3. Los 10 días en que más tweets se publicaron\n",
-            "4. Los 10 hashtags más populares\n",
-            "X. Salir\n",
-            "Ingrese el número de su elección: x\n",
-            "                 hashtagName   count\n",
-            "0            #FarmersProtest  406613\n",
-            "1         #IStandWithFarmers   15783\n",
-            "2            #farmersprotest   15458\n",
-            "3  #IndianFarmersHumanRights   12019\n",
-            "4           #FarmersAreIndia   11043\n",
-            "5          #StandWithFarmers   10645\n",
-            "6                   #Rihanna    9117\n",
-            "7           #FarmersProtests    8750\n",
-            "8                   #Farmers    6561\n",
-            "9          #shameonbollywood    6270\n",
-            "\n",
-            "\n",
-            "\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
