--- a/diagnostico_IIC2154.ipynb
+++ b/diagnostico_IIC2154.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "diagnostico-IIC2154.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "name": "python3",
@@ -854,343 +855,6 @@
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "users.head()"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 508
-        },
-        "id": "LzNu3zJdzTHa",
-        "outputId": "97f3c0c4-714c-42f2-f1ee-9414725222af"
-      },
-      "execution_count": 84,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "          username        displayname               userId  \\\n",
-              "0   ShashiRajbhar6     Shashi Rajbhar  1015969769760096256   \n",
-              "1  kaursuk06272818  KAUR SUKH🌾ਕੌਰ ਸੁਖ  1332937272581263362   \n",
-              "3    SukhdevSingh_      Sukhdev Singh  1308356658582618112   \n",
-              "4  Davidmu66668113     tera jija 🤨🚩🇺🇸  1357311756532649985   \n",
-              "5   Abhimanyu_1987     Abhimanyu 🌏 🇮🇳           2918610912   \n",
-              "\n",
-              "                                         description  \\\n",
-              "0  Satya presan 🤔ho Sakta but prajit💪 nhi\\njhuth ...   \n",
-              "1        ਜਿਓਣਾ ਕੀ ਸਰੀਰਾਂ ਦਾ ਜੇਕਰ ਹੋਣ ਜ਼ਮੀਰਾਂ ਮਰੀਆਂ 🌼   \n",
-              "3  Just a part of my society . Social and Politic...   \n",
-              "4                                     dream boy 🌪🌍🔥💯   \n",
-              "5                                          Seeker...   \n",
-              "\n",
-              "                                      rawDescription descriptionUrls  \\\n",
-              "0  Satya presan 🤔ho Sakta but prajit💪 nhi\\njhuth ...              []   \n",
-              "1        ਜਿਓਣਾ ਕੀ ਸਰੀਰਾਂ ਦਾ ਜੇਕਰ ਹੋਣ ਜ਼ਮੀਰਾਂ ਮਰੀਆਂ 🌼              []   \n",
-              "3  Just a part of my society . Social and Politic...              []   \n",
-              "4                                     dream boy 🌪🌍🔥💯              []   \n",
-              "5                                          Seeker...              []   \n",
-              "\n",
-              "   verified                    created  followersCount  friendsCount  ...  \\\n",
-              "0     False  2018-07-08T14:44:03+00:00            1788          1576  ...   \n",
-              "1     False  2020-11-29T06:40:06+00:00              51            68  ...   \n",
-              "3     False  2020-09-22T10:45:27+00:00            2595          3314  ...   \n",
-              "4     False  2021-02-04T12:55:36+00:00              18           286  ...   \n",
-              "5     False  2014-12-04T13:29:54+00:00             173            41  ...   \n",
-              "\n",
-              "   favouritesCount  listedCount  mediaCount                  location  \\\n",
-              "0            26071            1         254  Azm Uttar Pradesh, India   \n",
-              "1             3676            0         607                             \n",
-              "3             3533            0         519             Punjab, India   \n",
-              "4              520            0           3                             \n",
-              "5            16364           19         112    Jaipur,Rajasthan,India   \n",
-              "\n",
-              "  protected  linkUrl linkTcourl  \\\n",
-              "0     False     None       None   \n",
-              "1     False     None       None   \n",
-              "3     False     None       None   \n",
-              "4     False     None       None   \n",
-              "5     False     None       None   \n",
-              "\n",
-              "                                     profileImageUrl  \\\n",
-              "0  https://pbs.twimg.com/profile_images/135433129...   \n",
-              "1  https://pbs.twimg.com/profile_images/133295149...   \n",
-              "3  https://pbs.twimg.com/profile_images/130835702...   \n",
-              "4  https://pbs.twimg.com/profile_images/137600703...   \n",
-              "5  https://pbs.twimg.com/profile_images/125684524...   \n",
-              "\n",
-              "                                    profileBannerUrl  \\\n",
-              "0  https://pbs.twimg.com/profile_banners/10159697...   \n",
-              "1  https://pbs.twimg.com/profile_banners/13329372...   \n",
-              "3  https://pbs.twimg.com/profile_banners/13083566...   \n",
-              "4  https://pbs.twimg.com/profile_banners/13573117...   \n",
-              "5  https://pbs.twimg.com/profile_banners/29186109...   \n",
-              "\n",
-              "                            profileUrl  \n",
-              "0   https://twitter.com/ShashiRajbhar6  \n",
-              "1  https://twitter.com/kaursuk06272818  \n",
-              "3    https://twitter.com/SukhdevSingh_  \n",
-              "4  https://twitter.com/Davidmu66668113  \n",
-              "5   https://twitter.com/Abhimanyu_1987  \n",
-              "\n",
-              "[5 rows x 21 columns]"
-            ],
-            "text/html": [
-              "\n",
-              "  <div id=\"df-8fae17a1-77b1-4b8c-867a-5d963b318673\">\n",
-              "    <div class=\"colab-df-container\">\n",
-              "      <div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>username</th>\n",
-              "      <th>displayname</th>\n",
-              "      <th>userId</th>\n",
-              "      <th>description</th>\n",
-              "      <th>rawDescription</th>\n",
-              "      <th>descriptionUrls</th>\n",
-              "      <th>verified</th>\n",
-              "      <th>created</th>\n",
-              "      <th>followersCount</th>\n",
-              "      <th>friendsCount</th>\n",
-              "      <th>...</th>\n",
-              "      <th>favouritesCount</th>\n",
-              "      <th>listedCount</th>\n",
-              "      <th>mediaCount</th>\n",
-              "      <th>location</th>\n",
-              "      <th>protected</th>\n",
-              "      <th>linkUrl</th>\n",
-              "      <th>linkTcourl</th>\n",
-              "      <th>profileImageUrl</th>\n",
-              "      <th>profileBannerUrl</th>\n",
-              "      <th>profileUrl</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>ShashiRajbhar6</td>\n",
-              "      <td>Shashi Rajbhar</td>\n",
-              "      <td>1015969769760096256</td>\n",
-              "      <td>Satya presan 🤔ho Sakta but prajit💪 nhi\\njhuth ...</td>\n",
-              "      <td>Satya presan 🤔ho Sakta but prajit💪 nhi\\njhuth ...</td>\n",
-              "      <td>[]</td>\n",
-              "      <td>False</td>\n",
-              "      <td>2018-07-08T14:44:03+00:00</td>\n",
-              "      <td>1788</td>\n",
-              "      <td>1576</td>\n",
-              "      <td>...</td>\n",
-              "      <td>26071</td>\n",
-              "      <td>1</td>\n",
-              "      <td>254</td>\n",
-              "      <td>Azm Uttar Pradesh, India</td>\n",
-              "      <td>False</td>\n",
-              "      <td>None</td>\n",
-              "      <td>None</td>\n",
-              "      <td>https://pbs.twimg.com/profile_images/135433129...</td>\n",
-              "      <td>https://pbs.twimg.com/profile_banners/10159697...</td>\n",
-              "      <td>https://twitter.com/ShashiRajbhar6</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>kaursuk06272818</td>\n",
-              "      <td>KAUR SUKH🌾ਕੌਰ ਸੁਖ</td>\n",
-              "      <td>1332937272581263362</td>\n",
-              "      <td>ਜਿਓਣਾ ਕੀ ਸਰੀਰਾਂ ਦਾ ਜੇਕਰ ਹੋਣ ਜ਼ਮੀਰਾਂ ਮਰੀਆਂ 🌼</td>\n",
-              "      <td>ਜਿਓਣਾ ਕੀ ਸਰੀਰਾਂ ਦਾ ਜੇਕਰ ਹੋਣ ਜ਼ਮੀਰਾਂ ਮਰੀਆਂ 🌼</td>\n",
-              "      <td>[]</td>\n",
-              "      <td>False</td>\n",
-              "      <td>2020-11-29T06:40:06+00:00</td>\n",
-              "      <td>51</td>\n",
-              "      <td>68</td>\n",
-              "      <td>...</td>\n",
-              "      <td>3676</td>\n",
-              "      <td>0</td>\n",
-              "      <td>607</td>\n",
-              "      <td></td>\n",
-              "      <td>False</td>\n",
-              "      <td>None</td>\n",
-              "      <td>None</td>\n",
-              "      <td>https://pbs.twimg.com/profile_images/133295149...</td>\n",
-              "      <td>https://pbs.twimg.com/profile_banners/13329372...</td>\n",
-              "      <td>https://twitter.com/kaursuk06272818</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>SukhdevSingh_</td>\n",
-              "      <td>Sukhdev Singh</td>\n",
-              "      <td>1308356658582618112</td>\n",
-              "      <td>Just a part of my society . Social and Politic...</td>\n",
-              "      <td>Just a part of my society . Social and Politic...</td>\n",
-              "      <td>[]</td>\n",
-              "      <td>False</td>\n",
-              "      <td>2020-09-22T10:45:27+00:00</td>\n",
-              "      <td>2595</td>\n",
-              "      <td>3314</td>\n",
-              "      <td>...</td>\n",
-              "      <td>3533</td>\n",
-              "      <td>0</td>\n",
-              "      <td>519</td>\n",
-              "      <td>Punjab, India</td>\n",
-              "      <td>False</td>\n",
-              "      <td>None</td>\n",
-              "      <td>None</td>\n",
-              "      <td>https://pbs.twimg.com/profile_images/130835702...</td>\n",
-              "      <td>https://pbs.twimg.com/profile_banners/13083566...</td>\n",
-              "      <td>https://twitter.com/SukhdevSingh_</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>Davidmu66668113</td>\n",
-              "      <td>tera jija 🤨🚩🇺🇸</td>\n",
-              "      <td>1357311756532649985</td>\n",
-              "      <td>dream boy 🌪🌍🔥💯</td>\n",
-              "      <td>dream boy 🌪🌍🔥💯</td>\n",
-              "      <td>[]</td>\n",
-              "      <td>False</td>\n",
-              "      <td>2021-02-04T12:55:36+00:00</td>\n",
-              "      <td>18</td>\n",
-              "      <td>286</td>\n",
-              "      <td>...</td>\n",
-              "      <td>520</td>\n",
-              "      <td>0</td>\n",
-              "      <td>3</td>\n",
-              "      <td></td>\n",
-              "      <td>False</td>\n",
-              "      <td>None</td>\n",
-              "      <td>None</td>\n",
-              "      <td>https://pbs.twimg.com/profile_images/137600703...</td>\n",
-              "      <td>https://pbs.twimg.com/profile_banners/13573117...</td>\n",
-              "      <td>https://twitter.com/Davidmu66668113</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>5</th>\n",
-              "      <td>Abhimanyu_1987</td>\n",
-              "      <td>Abhimanyu 🌏 🇮🇳</td>\n",
-              "      <td>2918610912</td>\n",
-              "      <td>Seeker...</td>\n",
-              "      <td>Seeker...</td>\n",
-              "      <td>[]</td>\n",
-              "      <td>False</td>\n",
-              "      <td>2014-12-04T13:29:54+00:00</td>\n",
-              "      <td>173</td>\n",
-              "      <td>41</td>\n",
-              "      <td>...</td>\n",
-              "      <td>16364</td>\n",
-              "      <td>19</td>\n",
-              "      <td>112</td>\n",
-              "      <td>Jaipur,Rajasthan,India</td>\n",
-              "      <td>False</td>\n",
-              "      <td>None</td>\n",
-              "      <td>None</td>\n",
-              "      <td>https://pbs.twimg.com/profile_images/125684524...</td>\n",
-              "      <td>https://pbs.twimg.com/profile_banners/29186109...</td>\n",
-              "      <td>https://twitter.com/Abhimanyu_1987</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "<p>5 rows × 21 columns</p>\n",
-              "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8fae17a1-77b1-4b8c-867a-5d963b318673')\"\n",
-              "              title=\"Convert this dataframe to an interactive table.\"\n",
-              "              style=\"display:none;\">\n",
-              "        \n",
-              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
-              "       width=\"24px\">\n",
-              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
-              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
-              "  </svg>\n",
-              "      </button>\n",
-              "      \n",
-              "  <style>\n",
-              "    .colab-df-container {\n",
-              "      display:flex;\n",
-              "      flex-wrap:wrap;\n",
-              "      gap: 12px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert {\n",
-              "      background-color: #E8F0FE;\n",
-              "      border: none;\n",
-              "      border-radius: 50%;\n",
-              "      cursor: pointer;\n",
-              "      display: none;\n",
-              "      fill: #1967D2;\n",
-              "      height: 32px;\n",
-              "      padding: 0 0 0 0;\n",
-              "      width: 32px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert:hover {\n",
-              "      background-color: #E2EBFA;\n",
-              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
-              "      fill: #174EA6;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert {\n",
-              "      background-color: #3B4455;\n",
-              "      fill: #D2E3FC;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert:hover {\n",
-              "      background-color: #434B5C;\n",
-              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
-              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
-              "      fill: #FFFFFF;\n",
-              "    }\n",
-              "  </style>\n",
-              "\n",
-              "      <script>\n",
-              "        const buttonEl =\n",
-              "          document.querySelector('#df-8fae17a1-77b1-4b8c-867a-5d963b318673 button.colab-df-convert');\n",
-              "        buttonEl.style.display =\n",
-              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
-              "\n",
-              "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-8fae17a1-77b1-4b8c-867a-5d963b318673');\n",
-              "          const dataTable =\n",
-              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
-              "                                                     [key], {});\n",
-              "          if (!dataTable) return;\n",
-              "\n",
-              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
-              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
-              "            + ' to learn more about interactive tables.';\n",
-              "          element.innerHTML = '';\n",
-              "          dataTable['output_type'] = 'display_data';\n",
-              "          await google.colab.output.renderOutput(dataTable, element);\n",
-              "          const docLink = document.createElement('div');\n",
-              "          docLink.innerHTML = docLinkHtml;\n",
-              "          element.appendChild(docLink);\n",
-              "        }\n",
-              "      </script>\n",
-              "    </div>\n",
-              "  </div>\n",
-              "  "
-            ]
-          },
-          "metadata": {},
-          "execution_count": 84
-        }
-      ]
     },
     {
       "cell_type": "markdown",
@@ -2558,6 +2222,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Programa principal"
+      ],
+      "metadata": {
+        "id": "A_waA9lfZZuB"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "def main():\n",
@@ -2599,6 +2272,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#Al ejecutar esta celda comenzará el programa principal\n",
         "main()"
       ],
       "metadata": {
