refactor: deleting unused library and adding reading file comments

--- a/diagnostico_IIC2154.ipynb
+++ b/diagnostico_IIC2154.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "diagnostico-IIC2154.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "toc_visible": true
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -31,14 +30,13 @@
     {
       "cell_type": "code",
       "source": [
-        "import json\n",
         "import pandas as pd\n",
         "import re"
       ],
       "metadata": {
         "id": "rzfhy2Lp0oy6"
       },
-      "execution_count": 110,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -54,7 +52,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Obtenemos el dataset desde dropbox y lo cargamos:"
+        "**(Sólo si se está abriendo desde Colab)** Obtenemos el dataset desde dropbox y lo cargamos:"
       ],
       "metadata": {
         "id": "LoUkSP-xb5Ap"
@@ -63,6 +61,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#NO correr esta celda si se abre desde local\n",
         "!wget -O tweets.json https://www.dropbox.com/s/ghyvp86w05n52r1/farmers-protest-tweets-2021-03-5.json?dl=0"
       ],
       "metadata": {
@@ -103,8 +102,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Importante: Si se abre en local con Jupyter Notebook** asegurarse de que el archivo JSON esté en la misma carpeta que el notebook y tenga el nombre de archivo `tweets.json`."
+      ],
+      "metadata": {
+        "id": "f2tUx74oxcqN"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
+        "#Desde esta celda en adelante se corre tanto si se abre desde local como desde Colab\n",
         "tweets = pd.read_json('tweets.json', lines=True)"
       ],
       "metadata": {
@@ -1287,7 +1296,7 @@
       "metadata": {
         "id": "2-5g6cxnXQYE"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1303,7 +1312,7 @@
         "id": "7cOXlFmkp9z1",
         "outputId": "8b53d252-ac55-4893-a2c2-fc9ad4d431bc"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1541,7 +1550,7 @@
       "metadata": {
         "id": "kViAhikgXVNU"
       },
-      "execution_count": 101,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1557,7 +1566,7 @@
         "id": "e1NzH8sZvxPd",
         "outputId": "6e98b6f2-f073-4605-ad73-7f9ab3505cbb"
       },
-      "execution_count": 102,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1778,7 +1787,7 @@
       "metadata": {
         "id": "iY7XypzCXbo5"
       },
-      "execution_count": 108,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1794,7 +1803,7 @@
         "id": "tUdhothL-QNF",
         "outputId": "9d4e30d5-1255-45db-fc2d-5d099e23de54"
       },
-      "execution_count": 109,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1999,7 +2008,7 @@
       "metadata": {
         "id": "wEFtzg2gBJ42"
       },
-      "execution_count": 156,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2024,7 +2033,7 @@
       "metadata": {
         "id": "sja2QCJnXkBH"
       },
-      "execution_count": 170,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2040,7 +2049,7 @@
         "id": "pF5211lAPfe0",
         "outputId": "dedd924f-60b0-47e4-a4ae-13c2352b332f"
       },
-      "execution_count": 171,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2234,39 +2243,39 @@
       "cell_type": "code",
       "source": [
         "def main():\n",
-        "  print(\"Bienvenido al sistema de análsis de Twitter.\")\n",
-        "  satisfecho = False\n",
+        "    print(\"Bienvenido al sistema de análsis de Twitter.\")\n",
+        "    satisfecho = False\n",
         "\n",
-        "  while not satisfecho:\n",
-        "      print('\\n¿Qué deseas saber?')\n",
-        "      print(\"1. Los 10 tweets más retweeteados\\n2. Los 10 usuarios que más tweets han publicado\\n3. Los 10 días en que más tweets se publicaron\\n4. Los 10 hashtags más populares\\nX. Salir\")\n",
-        "      selected = input(\"Ingrese el número de su elección: \")\n",
+        "    while not satisfecho:\n",
+        "        print('\\n¿Qué deseas saber?')\n",
+        "        print(\"1. Los 10 tweets más retweeteados\\n2. Los 10 usuarios que más tweets han publicado\\n3. Los 10 días en que más tweets se publicaron\\n4. Los 10 hashtags más populares\\nX. Salir\")\n",
+        "        selected = input(\"Ingrese el número de su elección: \")\n",
         "\n",
-        "      if selected == '1':\n",
-        "          info_selected = top10_retweeted()\n",
-        "      elif selected == '2':\n",
-        "          info_selected = top10_users()\n",
-        "      elif selected == '3':\n",
-        "          info_selected = top10_days()\n",
-        "      elif selected == '4':\n",
-        "          info_selected = top10_hashtags()\n",
-        "      elif selected == 'X' or selected == 'x':\n",
-        "          satisfecho = True\n",
-        "          print('\\nNos vemos!')\n",
-        "          continue\n",
-        "      else:\n",
-        "          print(\"\\nEso no está entre nuestras opciones, inténtalo otra vez\")\n",
-        "          continue\n",
+        "        if selected == '1':\n",
+        "            info_selected = top10_retweeted()\n",
+        "        elif selected == '2':\n",
+        "            info_selected = top10_users()\n",
+        "        elif selected == '3':\n",
+        "            info_selected = top10_days()\n",
+        "        elif selected == '4':\n",
+        "            info_selected = top10_hashtags()\n",
+        "        elif selected == 'X' or selected == 'x':\n",
+        "            satisfecho = True\n",
+        "            print('\\nNos vemos!')\n",
+        "            continue\n",
+        "        else:\n",
+        "            print(\"\\nEso no está entre nuestras opciones, inténtalo otra vez\")\n",
+        "            continue\n",
         "\n",
-        "      print('\\n')\n",
-        "      display(info_selected)\n",
-        "      print('\\n')\n",
+        "        print('\\n')\n",
+        "        display(info_selected)\n",
+        "        print('\\n')\n",
         "      "
       ],
       "metadata": {
         "id": "_ahBY4wgT6i4"
       },
-      "execution_count": 183,
+      "execution_count": null,
       "outputs": []
     },
     {
